SERVER-28890 Workaround for upcoming `/Zc:ternary`

This workaround allows building MongoDB under Microsoft's upcoming
compiler, with the `/Zc:ternary` option enabled.  This option would
be implied by the `/permissive-` option.  The code fails to compile
under this mode when using Microsoft's existing `std::list`
implementation.  This explicit cast can be removed once Microsoft's
`std::list` stops using inheritance between const and modifiable
iterators.

The issue arises because the `?:` ternary operator requires an
impossible conversion from a `const iterator &` to a
`const_iterator &&` or a `const_iterator &`.  This occurs because
Microsoft's `std::list< ... >::iterator` inherits from
`std::list< ... >::const_iterator`.  Were the `const iterator &`
non-constant (`iterator &`), this would work.  Additionally, were the
`const_iterator &` constant (`const const_iterator &`), this would
also work.

Closes #1147